increased width of nav bar so that 'change language' and german/french versions stop wrapping

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -149,7 +149,7 @@ div.header_right{
 }
 
 .main_nav_tabs{
-    width: 500px;
+    width: 700px;
     float:left;
     position:absolute; 
     bottom:0;
